Convert Uniq util to use Stream API, add unit test